[tool.poetry]
name = "repl_python3_discord-price-bot"
version = "0.1.0"
description = ""
authors = ["rarcif <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
replit = "^3.2.4"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
